--- a/Utilities/lbt_gtk_layout.glade
+++ b/Utilities/lbt_gtk_layout.glade
@@ -7,7 +7,7 @@
     <property name="title" translatable="yes">Linux Battery Tracker</property>
     <property name="default-height">600</property>
     <child>
-      <object class="GtkBox">
+      <object class="GtkBox" id="main_win_box">
         <property name="name">main_box</property>
         <property name="visible">True</property>
         <property name="can-focus">False</property>
