--- a/Utilities/lbt_gtk_layout.glade
+++ b/Utilities/lbt_gtk_layout.glade
@@ -11,7 +11,6 @@
   <object class="GtkWindow" id="main_win">
     <property name="can-focus">False</property>
     <property name="title" translatable="yes">Linux Battery Tracker</property>
-    <property name="default-height">600</property>
     <child>
       <object class="GtkBox" id="main_win_box">
         <property name="name">main_box</property>
@@ -19,13 +18,13 @@
         <property name="can-focus">False</property>
         <property name="margin-start">10</property>
         <property name="margin-end">10</property>
-        <property name="margin-top">20</property>
-        <property name="margin-bottom">50</property>
+        <property name="margin-bottom">10</property>
         <property name="orientation">vertical</property>
         <child>
           <object class="GtkLabel" id="chart_name">
             <property name="visible">True</property>
             <property name="can-focus">False</property>
+            <property name="margin-bottom">15</property>
             <property name="label" translatable="yes">Current Date</property>
             <attributes>
               <attribute name="font-desc" value="Source Han Sans KR Semi-Light 20"/>
@@ -44,6 +43,9 @@
             <property name="can-focus">False</property>
             <property name="halign">center</property>
             <property name="valign">center</property>
+            <property name="margin-start">10</property>
+            <property name="margin-end">10</property>
+            <property name="margin-bottom">15</property>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -55,11 +57,11 @@
           <object class="GtkBox" id="days_button">
             <property name="visible">True</property>
             <property name="can-focus">False</property>
-            <property name="margin-start">10</property>
-            <property name="margin-end">10</property>
+            <property name="margin-start">15</property>
+            <property name="margin-end">15</property>
             <property name="margin-top">10</property>
             <property name="margin-bottom">10</property>
-            <property name="spacing">15</property>
+            <property name="spacing">6</property>
             <property name="homogeneous">True</property>
             <child>
               <object class="GtkButton" id="td_button">
@@ -89,7 +91,7 @@
             </child>
             <child>
               <object class="GtkButton" id="2dy_button">
-                <property name="label" translatable="yes">2 Days Ago</property>
+                <property name="label" translatable="yes">2d Ago</property>
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
                 <property name="receives-default">True</property>
@@ -102,7 +104,7 @@
             </child>
             <child>
               <object class="GtkButton" id="3dy_button">
-                <property name="label" translatable="yes">3 Days Ago</property>
+                <property name="label" translatable="yes">3d Ago</property>
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
                 <property name="receives-default">True</property>
@@ -115,7 +117,7 @@
             </child>
             <child>
               <object class="GtkButton" id="4dy_button">
-                <property name="label" translatable="yes">4 Days Ago</property>
+                <property name="label" translatable="yes">4d Ago</property>
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
                 <property name="receives-default">True</property>
@@ -128,7 +130,7 @@
             </child>
             <child>
               <object class="GtkButton" id="5dy_button">
-                <property name="label" translatable="yes">5 Days Ago</property>
+                <property name="label" translatable="yes">5d Ago</property>
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
                 <property name="receives-default">True</property>
@@ -141,7 +143,7 @@
             </child>
             <child>
               <object class="GtkButton" id="6dy_button">
-                <property name="label" translatable="yes">6 Days Ago</property>
+                <property name="label" translatable="yes">6d Ago</property>
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
                 <property name="receives-default">True</property>
@@ -168,7 +170,7 @@
           </object>
           <packing>
             <property name="expand">False</property>
-            <property name="fill">True</property>
+            <property name="fill">False</property>
             <property name="position">2</property>
           </packing>
         </child>
