--- a/Utilities/lbt_gtk_layout.glade
+++ b/Utilities/lbt_gtk_layout.glade
@@ -2,12 +2,6 @@
 <!-- Generated with glade 3.38.2 -->
 <interface>
   <requires lib="gtk+" version="3.24"/>
-  <object class="GtkWindow">
-    <property name="can-focus">False</property>
-    <child>
-      <placeholder/>
-    </child>
-  </object>
   <object class="GtkWindow" id="main_win">
     <property name="can-focus">False</property>
     <property name="title" translatable="yes">Linux Battery Tracker</property>
@@ -69,6 +63,7 @@
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
                 <property name="receives-default">True</property>
+                <signal name="clicked" handler="on_td_clicked" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -82,6 +77,7 @@
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
                 <property name="receives-default">True</property>
+                <signal name="clicked" handler="on_yd_clicked" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -95,6 +91,7 @@
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
                 <property name="receives-default">True</property>
+                <signal name="clicked" handler="on_2d_clicked" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -108,6 +105,7 @@
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
                 <property name="receives-default">True</property>
+                <signal name="clicked" handler="on_3d_clicked" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -121,6 +119,7 @@
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
                 <property name="receives-default">True</property>
+                <signal name="clicked" handler="on_4d_clicked" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -134,6 +133,7 @@
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
                 <property name="receives-default">True</property>
+                <signal name="clicked" handler="on_5d_clicked" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -147,6 +147,7 @@
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
                 <property name="receives-default">True</property>
+                <signal name="clicked" handler="on_6d_clicked" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -160,6 +161,7 @@
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
                 <property name="receives-default">True</property>
+                <signal name="clicked" handler="on_wk_clicked" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">False</property>
