--- a/src/lbt_gtk_layout.glade
+++ b/src/lbt_gtk_layout.glade
@@ -4,7 +4,7 @@
   <requires lib="gtk+" version="3.24"/>
   <object class="GtkWindow" id="main_win">
     <property name="can-focus">False</property>
-    <property name="icon">../src/icons8-battery-128.png</property>
+    <property name="icon">icons8-battery-128.png</property>
     <child>
       <object class="GtkBox" id="main_win_box">
         <property name="name">main_box</property>
@@ -18,7 +18,6 @@
           <object class="GtkLabel" id="chart_name">
             <property name="visible">True</property>
             <property name="can-focus">False</property>
-            <property name="margin-bottom">15</property>
             <property name="label" translatable="yes">Current Date</property>
             <attributes>
               <attribute name="font-desc" value="Source Han Sans KR Semi-Light 20"/>
@@ -177,9 +176,6 @@
           </packing>
         </child>
       </object>
-    </child>
-    <child type="titlebar">
-      <placeholder/>
     </child>
   </object>
 </interface>
