--- a/src/lbt_gtk_layout.glade
+++ b/src/lbt_gtk_layout.glade
@@ -4,6 +4,7 @@
   <requires lib="gtk+" version="3.24"/>
   <object class="GtkWindow" id="main_win">
     <property name="can-focus">False</property>
+    <property name="title" translatable="yes">Linux Battery Tracker</property>
     <property name="icon">icons8-battery-128.png</property>
     <child>
       <object class="GtkBox" id="main_win_box">
